# FedBertLoRA

./: .gitignore  20newsgroups_agglo_checkpoint_changes_summary.md  CLAUDE.md  README.md  analyze_partition.py  experiment_without_serverside_lr_checkpoint_plan.md  plot_method_comparison.py  pyproject.toml  run_20newsgroups_alpha03.sh  run_20newsgroups_baselines_alpha05.sh  run_20newsgroups_fedsa_10round_allckpt.sh  run_20newsgroups_ffa_alpha05.sh  run_baseline_alpha03.sh  run_fedalc_all.sh  run_fedalc_alpha03.sh  run_fedalc_ap_lwc.sh  run_fedalc_ap_multi.sh  run_fedalc_ap_multi_smoke.sh  run_fedalc_lwc.sh  run_fedalc_random.sh  run_fedavg_all.sh  run_fedsa_all.sh  run_fedsa_smoke_allckpt.sh  run_ffa_all.sh  run_ffa_alpha05.sh  run_ffa_qnli_alpha05.sh  run_lwc_alpha03.sh  run_lwc_qnli_smoke.sh  wandb_logging.md
.claude/rules/: INDEX.md  _deprecated_experiment_scope.md  commit_format.md  evaluation_metric.md  experiment_scope.md  fedalc_family.md  git_permission.md  log_directory_layout.md
bert/: __init__.py  client_app.py  dataset.py  experiment_config.py  fedalc_agglo_lwc_strategy.py  fedalc_ap_lwc_strategy.py  fedalc_ap_multi_strategy.py  fedalc_ap_strategy.py  fedalc_lwc_strategy.py  fedalc_random_strategy.py  fedalc_strategy.py  fedsa_strategy.py  lora_utils.py  models.py  server_app.py  strategy.py  task.py  task_registry.py
centralized_learning/: benchmark_reference.md  experiment_summary.md  run_20newsgroups.sh  run_all.sh  train.py
notes/: ACTIVITY.md  docs_index.md
notes/_archived/: README.md  log.md
notes/_archived/experiments/: fedalc_vs_lwc_comparison.md
notes/concepts/: clustering_methods_comparison.md  eval_weighting_convention.md  evaluation_metrics.md  fedalc_methods_comparison.md  fedalc_naming_convention.md  flwr_simulation_noise_floor.md  lora_vs_full_finetuning.md  why_local_classifier.md
notes/experiments/: all_methods_comparison.md  ap_vs_lwc_clustering_deepdive.md  data_distribution_30clients.md  data_distribution_mnli_qqp_a0.3.md  data_distribution_sst2.md  data_distribution_tables.md  fedalc_lwc_results.md  fedalc_vs_lwc_no_warmup_results.md  fedavg_results.md  fedavg_vs_fedsa_comparison.md  findings_summary.md  glue_datasets.md  label_skew_singleton_analysis.md  unweighted_best_summary.md
notes/implementation/: fedsa_code_review.md  fedsa_detailed_implementation.md  wandb_logging.md
notes/papers/: FedALC-LoRA.md  HiLoRA_detailed.md  comparison_methods.md  personalized_fl_papers.md  related_papers.md  task_vector_connection.md
notes/plans/: fedalc_ap_multi_action_plan.md  fedalc_lwc_design.md  next_steps.md  research_plan.md
plots/: README.md
plots/_archived/: README.md
tools/: apply_batch_dir_rename.sh  apply_log_rename.sh  diagnose_flwr_determinism.sh  dump_partition_stats.py  log_inventory.tsv  log_rename_manifest.tsv  reconstruct_server_eval_from_wandb.py  scan_log_inventory.py  verify_refactor_bit_exact.sh
