[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bert"
version = "2.0.0"
description = "FedSA-LoRA: Selective Aggregation for LoRA in Federated Learning on GLUE"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.18.0",
    "flwr-datasets>=0.5.0",
    "torch==2.5.1",
    "transformers>=4.30.0,<5.0",
    "peft>=0.7.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0,<3.0",
    "scikit-learn>=1.6.1,<2.0",
    "click>=8.1.0,<8.2",
    "wandb>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "zhchen"

[tool.flwr.app.components]
serverapp = "bert.server_app:app"
clientapp = "bert.client_app:app"

[tool.flwr.app.config]
# FL
num-server-rounds = 20
fraction-fit = 1.0

# Model + LoRA
model-name = "roberta-large"
lora-r = 8
lora-alpha = 16
lora-target-modules = "query,key,value,dense"

# Data
task-name = "sst2"
num-clients = 30  # must match [federations] num-supernodes
dirichlet-alpha = 0.5

# Training
learning-rate = 0.001
batch-size = 32
grad-accum-steps = 4
max-seq-length = 128
local-epochs = 1
weight-decay = 0.01
lora-dropout = 0.1
lr-scheduler-type = "constant"
test-split-ratio = 0.2
seed = 42
logging-steps = 10
log-dir = "logs"
log-timestamp = ""

# Strategy: "fedavg" | "fedsa" | "ffa" | "fedalc-ap" | "fedalc-ap-lwc" | "fedalc-ap-multi" | "fedalc-agglo-lwc"
aggregation-mode = "fedsa"

# FedALC-AP-LWC parameters (also reused by FedALC-AP-Multi for built-in layer selection)
warmup-sil-threshold = 0.5
freeze-sil-threshold = 0.8
layer-selection-k = 10
layer-reselect-every = 1  # 1=every round, 0=one-shot, N=every N rounds

# FedALC-AP-Multi parameters
hopkins-threshold = 0.75                      # Exit warm-up when Hopkins H > threshold
warmup-max-rounds = 10                        # Hard cap on warm-up length
freeze-stable-rounds = 3                      # Freeze when cluster stable for N rounds
layer-score-feature = "cumulative_delta_b"    # Layer scoring feature: "cumulative_delta_b" | "current_b"

# FedALC-Agglo-LWC parameters (fixed E-round FedSA warm-up → R_E cluster+freeze)
warmup-rounds = 5                             # Phase 0 length (FedSA warm-up rounds before cluster+freeze)
agglo-k-min = 2                               # Agglomerative K sweep lower bound
agglo-k-max = 10                              # Agglomerative K sweep upper bound
agglo-linkage = "average"                     # "average" | "complete" | "single" (ward rejected — requires Euclidean)
agglo-min-silhouette = 0.0                    # If best sweep sil < this → fallback to K=1

# Wandb (FL client logging)
wandb-enabled = false
wandb-project = "bert-federated"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 30
options.backend.client-resources.num-cpus = 4.0
options.backend.client-resources.num-gpus = 1.0
